# ChatYourNotes

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICK_TEST_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirement.txt  requirements.txt  start_uv.bat  start_uv.ps1  test_smart_retrieval.py
REPORT/: PROJECT_CHECK_REPORT.md  README_UPDATE_REPORT.md  SETUP_COMPLETE.md
app/: app.py
app/templates/: index.html
notebook/: playground.ipynb
src/: config.py  file_handler.py  ocr_reader.py  qa_service.py  smart_retrieval.py  summarizer.py  vector_store.py
